--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Basketball League</h1>
+<h1 class="title"><b>Basketball League</b></h1>
+<!-- <app-teams></app-teams> -->
 <router-outlet></router-outlet>
