--- a/src/app/components/teams/teams/teams.component.html
+++ b/src/app/components/teams/teams/teams.component.html
@@ -1,1 +1,27 @@
-<p>teams works!</p>
+<h1 class="page-title"><b>List of all Basketball Teams</b></h1>
+
+<div class="page-wrapper">
+    <table class="authors-table">
+        <tr>
+            <th>No.</th>
+            <th>Team</th>
+        </tr>
+
+        <tr *ngFor="let team of teamsArray; index as i">
+            <td>{{ i + 1 }}</td>
+            <td>{{ team.name }}</td>
+        </tr>
+
+        <div class="button-wrapper">
+            <button type="button" class="btn" routerLink="/teams/sort-asc">
+                Sort A-Z
+            </button>
+        </div>
+
+        <div class="button-wrapper">
+            <button type="button" class="btn" routerLink="/teams/sort-desc">
+                Sort Z-A
+            </button>
+        </div>
+    </table>
+</div>
