--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+$txt-color: #e1e9f8;
+$main-color: #351e0bb3;
 
-html, body { height: 100%; }
+html, body { 
+  height: 100%;
+  background-color: lightgray;
+  color: $txt-color;
+  background-image: url(basketball-wallpaper.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.page-wrapper {
+    min-width: 240px;
+    margin: 32px auto;
+    padding: 16px;
+    border: 2px solid $txt-color;
+    border-radius: 5px;
+    transition: all 0.2s;
+    backdrop-filter: blur(35px);
+    max-width: 80%;
+  }
+
+  .page-title {
+    text-align: center;
+  }
+
