Added match result service, css, htm, logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
+<header>
+    <div class="container">
+        <a href="#" class="logo">Basketball League</a>
+        <nav>
+            <ul>
+                <!-- <li><a href="#" routerLink="/home">Home</a></li> -->
+                <li><a href="#" routerLink="/get-teams">All Teams</a></li>
+                <li><a href="#" routerLink="/get-results">Match Results</a></li>
+                <li><a href="#" routerLink="/get-top-offensive">Top 5 offensive</a></li>
+                <li><a href="#" routerLink="/get-top-offensive">Top 5 defensive</a></li>
+                <li><a href="#" routerLink="/get-highlight-match">Highlight match</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<br>
+
 <h1 class="title"><b>Basketball League</b></h1>
-<!-- <app-teams></app-teams> -->
-<router-outlet></router-outlet>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
