--- a/src/app/components/teams/teams/teams.component.html
+++ b/src/app/components/teams/teams/teams.component.html
@@ -4,7 +4,7 @@
     <table class="authors-table">
         <tr>
             <th>No.</th>
-            <th>Team</th>
+            <th>Team name</th>
         </tr>
 
         <tr *ngFor="let team of teamsArray; index as i">
