Added all interfaces, best offensive component

--- a/src/app/components/teams/teams/teams.component.html
+++ b/src/app/components/teams/teams/teams.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title"><b>List of all Basketball Teams</b></h1>
+<h1 class="page-title"><b>List of all Basketball Teams (in alphabetical order)</b></h1>
 
 <div class="page-wrapper">
     <table class="authors-table">
