--- a/src/app/components/teams/teams/teams.component.html
+++ b/src/app/components/teams/teams/teams.component.html
@@ -7,7 +7,7 @@
             <th>Team name</th>
         </tr>
 
-        <tr *ngFor="let team of teamsArray; index as i">
+        <tr *ngFor="let team of teams; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.name }}</td>
         </tr>
