--- a/src/app/components/highlightMatch/highlight-match.component.html
+++ b/src/app/components/highlightMatch/highlight-match.component.html
@@ -10,7 +10,7 @@
             <th>Total points</th>
         </tr>
 
-        <tr *ngFor="let team of teamsScore; index as i">
+        <tr *ngFor="let team of highlightMatch; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.homeTeam }}</td>
             <td>{{ team.awayTeam }}</td>
