--- a/src/app/components/topFiveDefensive/best-defensive-teams.component.html
+++ b/src/app/components/topFiveDefensive/best-defensive-teams.component.html
@@ -8,7 +8,7 @@
             <th>Top score</th>
         </tr>
 
-        <tr *ngFor="let team of bestDefensiveTeams; index as i">
+        <tr *ngFor="let team of bestDefensive; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.name }}</td>
             <td>{{ team.minScore }}</td>
