--- a/src/app/components/topFiveOffensive/best-offensive-teams.component.html
+++ b/src/app/components/topFiveOffensive/best-offensive-teams.component.html
@@ -8,7 +8,7 @@
             <th>Top score</th>
         </tr>
 
-        <tr *ngFor="let team of bestOffensiveTeams; index as i">
+        <tr *ngFor="let team of bestOffensive; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.name }}</td>
             <td>{{ team.maxScore }}</td>
