Change property names

--- a/src/app/components/highlightMatch/highlight-match.component.html
+++ b/src/app/components/highlightMatch/highlight-match.component.html
@@ -15,7 +15,7 @@
             <td>{{ team.homeTeam }}</td>
             <td>{{ team.awayTeam }}</td>
             <td>{{ team.homeScore }} : {{ team.awayScore }}</td>
-            <td>{{ team.totalScores }}</td>
+            <td>{{ team.totalPoints }}</td>
         </tr>
     </table>
 </div>
