--- a/src/app/components/topFiveOffensive/best-offensive-teams.component.html
+++ b/src/app/components/topFiveOffensive/best-offensive-teams.component.html
@@ -11,7 +11,7 @@
         <tr *ngFor="let team of bestOffensive; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.name }}</td>
-            <td>{{ team.maxScore }}</td>
+            <td>{{ team.totalPoints }}</td>
         </tr>
     </table>
 </div>
