--- a/src/app/components/topFiveDefensive/best-defensive-teams.component.html
+++ b/src/app/components/topFiveDefensive/best-defensive-teams.component.html
@@ -11,7 +11,7 @@
         <tr *ngFor="let team of bestDefensive; index as i">
             <td>{{ i + 1 }}</td>
             <td>{{ team.name }}</td>
-            <td>{{ team.minScore }}</td>
+            <td>{{ team.defensivePoints }}</td>
         </tr>
     </table>
 </div>
