--- a/src/app/components/teams-desc/teams-desc.component.html
+++ b/src/app/components/teams-desc/teams-desc.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title"><b>List of all Basketball Teams</b></h1>
+<h1 class="page-title"><b>List of all Basketball Teams (reverse alphabetical order)</b></h1>
 
 <div class="page-wrapper">
     <table class="authors-table">
@@ -18,10 +18,5 @@
             </button>
         </div>
         
-        <div class="button-wrapper">
-            <button type="button" class="btn" routerLink="/get-teams-desc" routerLinkActive="active">
-                Sort Z-A
-            </button>
-        </div>
     </table>
 </div>
