--- a/src/app/components/teams-asc/teams-asc.component.html
+++ b/src/app/components/teams-asc/teams-asc.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title"><b>List of all Basketball Teams</b></h1>
+<h1 class="page-title"><b>List of all Basketball Teams (alphabetical order)</b></h1>
 
 <div class="page-wrapper">
     <table class="authors-table">
@@ -12,12 +12,6 @@
             <td>{{ team.name }}</td>
         </tr>
 
-        <div class="button-wrapper">
-            <button type="button" class="btn" routerLink="/get-teams-asc" routerLinkActive="active">
-                Sort A-Z
-            </button>
-        </div>
-        
         <div class="button-wrapper">
             <button type="button" class="btn" routerLink="/get-teams-desc" routerLinkActive="active">
                 Sort Z-A
